maybe vaguely some of it works

--- a/www/css/inventory.css
+++ b/www/css/inventory.css
@@ -15,5 +15,10 @@ footer {
     display: flex;
     flex-flow: row wrap;
     justify-content: start;
-    align-items: flex-start;
+    align-items: center;
+}
+
+.count {
+    font-size: small;
+    color: grey;
 }
