--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,7 +3,7 @@ body {
     border: 0;
     margin: 0;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
 }
@@ -14,4 +14,17 @@ canvas {
     margin: 1rem;
     overscroll-behavior-y: none;
     overscroll-behavior-x: none;
+}
+
+section {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
+figure {
+    margin: .5rem;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: start;
 }
